    for now, the code is basically copied and pasted)
  * raggle: added http open and read timeouts (set to 10 and 30 seconds
    respectively)

* Sat Sep 13 12:50:46 2003, pabs <pabs@pablotron.org>
  * raggle: finished Window#set_color, color entries for all
    window elements can include attributes now (fixes bug reported by
    Phil Gregory <phil@mithrandir.aperiodic.net>)

* Sat Sep 13 13:19:15 2003, pabs <pabs@pablotron.org>
  * raggle: add stdin and stdout support to OPML import/export
    (--import-opml - and --export-opml -, respectively)

* Sat Sep 13 13:34:10 2003, pabs <pabs@pablotron.org>
  * raggle: remove the open and read timeouts; they appear to be
    causing problems (not sure why yet)

* Sat Sep 13 13:35:12 2003, pabs <pabs@pablotron.org>
  * raggle: don't force version 1.8 (silly me)

* Sat Sep 13 14:03:50 2003, pabs <pabs@pablotron.org>
  * doc/pauls_feeds.opml.gz: updated
  * removed doc/pauls_feeds.yaml (only use OPML files now)

* Sat Sep 13 20:52:23 2003, pabs <pabs@pablotron.org>
  * raggle: ignore "a " and "the " prefix when sorting feed list

* Sun Sep 14 12:48:31 2003, pabs <pabs@pablotron.org>
  * raggle: add preliminary relative URL repair support (only works
    on a few instances)
  * raggle: grab image URL (displayed in web ui)
  * raggle: add categories (only accessible via the web ui at the moment)
  * raggle: only bind to local interface for web ui
  * raggle: log to $config['web_ui_log_path'] instead of stderr
  * extras/web_ui/inc/desc.css: add style for feed image
  * extras/web_ui/inc/desc.html: added feed image
  * extras/web_ui/inc/feed.html: add category to link
  * extras/web_ui/inc/feed_list.html: title is generated now (includes
    category)
  * extras/web_ui/inc/feed_list.html: add category select to bottom
  * extras/web_ui/inc/item_list.css: add style for feed description
  * extras/web_ui/inc/item_list.html: move feed desc to bottom of info
  * added extras/web_ui/inc/feed_image.html
