@@ -29,13 +29,14 @@
       __FEED_LIST_TITLE__
     </div>
 
-    <table id='feed-list-table'>
-      __FEEDS__
-    </table>
-    <form method='get' action='/raggle/feed'>
+    <form method='get' action='/raggle/feed' class='category-form'>
       <b>Category:</b>
       __CATEGORY_SELECT__
     </form>
+
+    <table id='feed-list-table' width='100%'>
+      __FEEDS__
+    </table>
   </body>
 </html>
 
