@@ -49,8 +49,14 @@ if __FILE__ == $0
   # win32 doesn't support these signals
   if RUBY_PLATFORM !~ /win32/i
     trap('QUIT') { puts "Quit"; exit -1 }
-    trap('HUP') { puts "Hangup"; exit -1 }
     trap('TERM') { puts "Term"; exit -1 }
+
+    # HUP invalidates all feeds and forces a refresh immediately
+    trap('HUP') { invalidate_feed(-1); $feed_thread.run }
+
+    # trap ALRM so it doesn't kill the process, but it will interrupt
+    # the feed grabbing sleep
+    trap('ALRM') { $feed_thread.run }
   end
 end
 
@@ -393,7 +399,7 @@ module Key
   end
 
   def Key::manual_update
-    $feed_thread.run if $config['use_manual_update']
+    $feed_thread.run
   end
 
   def Key::find_entry(win)
@@ -810,9 +816,21 @@ class FeedList
     @feeds << feed
   end
 
+  def categories
+    cats = {}
+    @feeds.each { |feed|
+      if feed['category']
+        feed['category'].split(/\s*,\s*/).each { |cat|
+          cats[cat.downcase] = cat
+        }
+      end
+    }
+    cats.values.compact.sort
+  end
+
   def category(cat = 'all')
-    if cat != 'all'
-      re = /\b#{cat}\b/
+    if cat !~ /\ball\b/i
+      re = /\b#{cat}\b/i
       @feeds.map { |feed| feed['category'] =~ re ? feed : nil }.compact
     else
       @feeds
@@ -1196,14 +1214,10 @@ module Feed
           $config['strip_external_entities'] && content =~ /<!ENTITY %.*?>/m
 
         # get host portion of original 
-        host_url = url.gsub(/^((?:\w+):\/\/)?(\w+)\/.*$/, '\1\2')
+        host_url = url.gsub(/^((?:\w+):\/\/)?([^\/]+)\/.*$/, '\1\2')
 
-        # fix relative URLs
-# 
-#         content = content.gsub(/<([^>]+)(href|src)=['"](\/[^"']+)['"]/,
-#                                "<\\1\\2='#{host_url}/\\3'")
-# 
-        content = content.gsub(/href='\/([^']+)'/,
+        # fix host-relative, absolute path URLs
+        content = content.gsub(/href=['"]\/([^'"]+?)['"]/,
                                "href='#{host_url}/\\1'")
 
         # parse URL content
@@ -1818,6 +1832,8 @@ module Raggle
           when 'add'
             url = $1 if req.query_string =~ /url=(.*)$/
             add_feed({ 'url' => url })
+            $feed_thread.run if $config['update_after_add']
+            sleep 1 # sleep for a second so the update happens
           when 'delete'
             if req.query_string =~ /id=(\d+)/
               id = $1.to_i
@@ -1834,7 +1850,7 @@ module Raggle
         end
           
         # build feed list title
-        list_title = 'Feeds ' << ((cat && cat != 'all') ? "(#{cat})" : '')
+        list_title = 'Feeds ' << ((cat && cat !~ /\ball\b/i) ? "(#{cat})" : '')
 
         # build each feed title
         $config['feeds'].category(cat).each_with_index { |feed, i|
@@ -2004,18 +2020,15 @@ module Raggle
 
     def build_category_select(cat)
       cat = 'all' unless cat
-      cats = {}
-
-      $config['feeds'].each { |feed| cats[feed['category']] = true }
       
       ret = "<select name='category' onChange='form.submit()'>\n" <<
             "  <option value='all' " <<
-            ((cat == 'all') ? ' selected="1"' : '') <<
+            ((cat =~ /\ball\b/i) ? ' selected="1"' : '') <<
             ">All</option>\n"
 
-      cats.keys.compact.sort.each { |opt| 
+      $config['feeds'].categories.each { |opt| 
         ret << "  <option value='#{opt}'" <<
-               ((cat == opt) ? ' selected="1"' : '') <<
+               ((cat =~ /\b#{opt}\b/i) ? ' selected="1"' : '') <<
                ">#{opt}</option>\n"
       }
       ret << "</select>\n"
@@ -2594,7 +2607,7 @@ def add_feed(opts)
     %w{title refresh}.each { |i| opts[i] ||= $config["default_feed_#{i}"] }
     $config['feeds'].add(opts['title'], opts['url'], opts['refresh'],
                          opts['lock_title?'], opts['save_items?'],
-			                   '', '', [], nil, nil, nil, opts['force'])
+			                   '', '', [], nil, nil, opts['force'])
 end
 
 #
@@ -2627,7 +2640,22 @@ def ncurses_add_feed
   $new_status = $status
   $status = msg
   set_status($new_status)
+
+  # force update now
+  $feed_thread.run if $config['update_after_add']
 end
+
+# 
+# #
+# # select a category (disabled for now)
+# #
+# def ncurses_select_category
+#   $category = 'all' unless $category
+# 
+#   cats = ['all']
+#   cats  $config['feeds'].categories.sort
+# end
+# 
 
 #
 # find entry in window
@@ -2932,7 +2960,8 @@ def main
     $config['default_feeds'].each {|feed|
       $config['feeds'].add(feed['title'], feed['url'], feed['refresh'],
                            feed['lock_title?'], feed['save_items?'],
-                           feed['site'], feed['desc'], feed['items'])
+                           feed['site'], feed['desc'], feed['items'],
+                           nil, feed['category'])
     }
   end
   
@@ -3131,18 +3160,20 @@ def main
     }
   end
 
-  # explicit GC thread
-  gc_thread = Thread.new { 
-    loop {
-      GC::start
-      sleep $config['gc_sleep_interval'] || 600
-    }
-  }
+# 
+#   # explicit GC thread
+#   gc_thread = Thread.new { 
+#     loop {
+#       GC::start
+#       sleep $config['gc_sleep_interval'] || 600
+#     }
+#   }
+# 
 
   # set thread priorities
   Thread::main.priority = $config['thread_priority_main'] || 5
   $feed_thread.priority = $config['thread_priority_feed'] || 0
-  gc_thread.priority    = $config['thread_priority_gc']   || 1
+  # gc_thread.priority    = $config['thread_priority_gc']   || 1
   if $config['run_http_server']
     http_thread.priority  = $config['thread_priority_http'] || 1
   end
@@ -3367,6 +3398,9 @@ $config = {
 
   # grab log mode (a == append, w == write)
   'grab_log_mode'         => 'w',
+
+  # update feeds after adding a new one?
+  'update_after_add'      => true,
 
   # strip html from item contents?
   'strip_html_tags'       => false,
@@ -3638,6 +3672,7 @@ $config = {
       'refresh'   => 240,
       'updated'   => -1,
       'desc'      => '',
+      'category'  => 'Raggle',
       'items'     => [ ],
     },
     { 'title'     => 'Alternet',
@@ -3646,24 +3681,25 @@ $config = {
       'desc'      => 'Alternative News and Information.',
       'refresh'   => 120,
       'updated'   => 0,
+      'category'  => 'Politics,News',
       'items'     => [ ],
     },
-# 
-#     { 'title'     => 'Daily Daemon News',
-#       'url'       => 'http://daily.daemonnews.org/ddn.rdf.php3',
-#       'site'      => 'http://daemonnews.org/',
-#       'desc'      => 'Daily Daemon News',
-#       'refresh'   => 120,
-#       'updated'   => 0,
-#       'items'     => [ ],
-#     },
-# 
+    { 'title'     => 'Daily Daemon News',
+      'url'       => 'http://daily.daemonnews.org/ddn.rdf.php3',
+      'site'      => 'http://daemonnews.org/',
+      'desc'      => 'Daily Daemon News',
+      'refresh'   => 120,
+      'updated'   => 0,
+      'category'  => 'Tech',
+      'items'     => [ ],
+    },
     { 'title'     => 'FreshMeat',
       'url'       => 'http://themes.freshmeat.net/backend/fm-newsletter.rdf',
       'site'      => 'http://www.freshmeat.net/',
       'desc'      => 'FreshMeat.',
       'refresh'   => 120,
       'updated'   => 0,
+      'category'  => 'Tech',
       'items'     => [ ],
     },
     { 'title'     => 'KernelTrap',
@@ -3672,6 +3708,7 @@ $config = {
       'desc'      => 'KernelTrap',
       'refresh'   => 120,
       'updated'   => 0,
+      'category'  => 'Tech',
       'items'     => [ ],
     },
     { 'title'     => 'Kuro5hin',
@@ -3680,6 +3717,7 @@ $config = {
       'desc'      => 'Kuro5hin',
       'refresh'   => 120,
       'updated'   => 0,
+      'category'  => 'Tech',
       'items'     => [ ],
     },
     { 'title'     => 'Linux Weekly News',
@@ -3688,6 +3726,16 @@ $config = {
       'desc'      => 'Linux Weekly News',
       'refresh'   => 120,
       'updated'   => 0,
+      'category'  => 'Tech',
+      'items'     => [ ],
+    },
+    { 'title'     => 'Linuxbrit.co.uk',
+      'url'       => 'http://www.linuxbrit.co.uk/rss.php',
+      'site'      => 'http://www.linuxbrit.co.uk/',
+      'desc'      => 'Linuxbrit.co.uk',
+      'refresh'   => 120,
+      'updated'   => 0,
+      'category'  => 'Blogs',
       'items'     => [ ],
     },
     { 'title'     => 'Pablotron',
@@ -3696,6 +3744,7 @@ $config = {
       'desc'      => 'Paul Duncan\'s personal site.',
       'refresh'   => 120,
       'updated'   => 0,
+      'category'  => 'Blogs',
       'items'     => [ ],
     },
     { 'title'     => 'Paul Duncan.org',
@@ -3704,6 +3753,7 @@ $config = {
       'desc'      => 'Paul Duncan\'s other personal site.',
       'refresh'   => 120,
       'updated'   => 0,
+      'category'  => 'Blogs',
       'items'     => [ ],
     },
     { 'title'     => 'Pigdog Journal',
@@ -3712,6 +3762,16 @@ $config = {
       'desc'      => 'Pigdog Journal',
       'refresh'   => 120,
       'updated'   => 0,
+      'category'  => 'Politics,News',
+      'items'     => [ ],
+    },
+    { 'title'     => 'Raggle: News',
+      'url'       => 'http://raggle.org/rss/',
+      'site'      => 'http://www.raggle.org/',
+      'desc'      => 'Raggle News',
+      'refresh'   => 120,
+      'updated'   => 0,
+      'category'  => 'Tech,Raggle',
       'items'     => [ ],
     },
     { 'title'     => 'Richlowe.net',
@@ -3720,6 +3780,7 @@ $config = {
       'desc'      => 'Richlowe.net',
       'refresh'   => 120,
       'updated'   => 0,
+      'category'  => 'Blogs',
       'items'     => [ ],
     },
     { 'title'     => 'Slashdot',
@@ -3728,6 +3789,7 @@ $config = {
       'desc'      => 'Slashdot',
       'refresh'   => 120,
       'updated'   => 0,
+      'category'  => 'Tech,News',
       'items'     => [ ],
     },
     { 'title'     => 'This Modern World',
@@ -3736,6 +3798,16 @@ $config = {
       'desc'      => 'This Modern World',
       'refresh'   => 120,
       'updated'   => 0,
+      'category'  => 'Blogs,Politics',
+      'items'     => [ ],
+    },
+    { 'title'     => 'Tynian.net',
+      'url'       => 'http://tynian.net/rss/',
+      'site'      => 'http://tynian.net/',
+      'desc'      => 'tynian.net',
+      'refresh'   => 120,
+      'updated'   => 0,
+      'category'  => 'Blogs',
       'items'     => [ ],
     },
     { 'title'     => 'W3C',
@@ -3744,6 +3816,34 @@ $config = {
       'desc'      => 'W3C',
       'refresh'   => 120,
       'updated'   => 0,
+      'category'  => 'Tech',
+      'items'     => [ ],
+    },
+    { 'title'     => 'Yahoo! News - Tech',
+      'url'       => 'http://rss.news.yahoo.com/rss/tech',
+      'site'      => 'http://news.yahoo.com/',
+      'desc'      => 'yahoo tech',
+      'refresh'   => 120,
+      'updated'   => 0,
+      'category'  => 'Tech,News',
+      'items'     => [ ],
+    },
+    { 'title'     => 'Yahoo! News - Top Stories',
+      'url'       => 'http://rss.news.yahoo.com/rss/topstories',
+      'site'      => 'http://news.yahoo.com/',
+      'desc'      => 'yahoo top stories',
+      'refresh'   => 120,
+      'updated'   => 0,
+      'category'  => 'News',
+      'items'     => [ ],
+    },
+    { 'title'     => 'Yahoo! News - World',
+      'url'       => 'http://rss.news.yahoo.com/rss/world',
+      'site'      => 'http://news.yahoo.com/',
+      'desc'      => 'yahoo world',
+      'refresh'   => 120,
+      'updated'   => 0,
+      'category'  => 'Politics,News',
       'items'     => [ ],
     },
   ],
